# youtube-video-downloader

./: README.md  pyproject.toml
app/: __init__.py
app/api/: download.py  video.py
app/pages/: index.py
app/services/: youtube.py
app/static/javascript/: index.js
app/templates/: index.html
