[tool.poetry]
name = "test-study"
version = "0.1.0"
description = ""
authors = ["masioware <marcioedumartinez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.0"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
